fix: Proper motions produce index out of bounds due to incorrect computation of maximum number of arrows.